Refactor: menerapkan fitur route groups dan private folders untuk menggabungkan logic dan route segment

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,13 +19,7 @@
 		],
 		"paths": {
 			"@/*": ["./src/*"],
-			"assets/*": ["./src/assets/*"],
-			"config/*": ["./src/config/*"],
-			"lib/*": ["./src/lib/*"],
-			"public/*": ["./src/public/*"],
-			"services/*": ["./src/services/*"],
-			"styles/*": ["./src/styles/*"],
-			"utils/*": ["./src/utils/*"]
+			"@/styles/*": ["./src/assets/styles/*"],
 		}
 	},
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
